# i9_smart_pdv_desktop_electron

./: .gitmodules  CLAUDE.md  Makefile  PROJETO.md  README.md
.github/workflows/: issue-auto-project.yml
docs/: CONFIGURACOES-SISTEMA.md  FUNCIONALIDADES.md  TRIBUTOS.md
docs/especialistas/: ESPECIALISTA-GITHUB-SUBMODULOS.md
pdv_desktop/src-tauri/icons/: icon.icns
pdv_desktop/src-tauri/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
